--- a/src/scss/component/multi-column-v2.scss
+++ b/src/scss/component/multi-column-v2.scss
@@ -19,6 +19,9 @@
         border-radius: 20px;
         border: 1px solid #000;
         background: #353434;
+        @media only screen and (max-width: 999px){
+            margin-left: 5px;
+        }
         @media screen and (min-width: 1000px){
             margin-right: 0px !important;
         }
